fix gap between menu and caret

--- a/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
@@ -203,7 +203,7 @@
     [dir="rtl"] & {
       transform: rotate(180deg);
       margin-right: calc(var(--dropdown-caret-height) * -1);
-      right: 0;
+      right: 1px;
     }
   }
 
